feat(views) criar views no modulo atendimento, referenciado schema de cadastro pacientes/profissionais;
Sistema rodando, porem integracao incompleta.

- schema.sql com schemas simulando modulo apae (cadastro paciente/profissionais) e o modulo local (atendimento);
- view-schemas.sql com sql das views requeridas na issue;

Pendente:
- Terminar refatoracao das entidades;
- Adaptar mappers e DTOs de acordo com views
- implementar liquibase